--- a/book.bib
+++ b/book.bib
@@ -1,10 +1,10 @@
-@Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
+@Book{mendoza2018,
+  title = {{R} para principiantes},
+  author = {Juan Bosco Mendoza Vega},
+  publisher = {},
+  address = {},
+  year = {2018},
+  edition = {1st},
   note = {ISBN 978-1498716963},
-  url = {http://yihui.name/knitr/},
+  url = {},
 }
