--- a/09-estructuras-control.Rmd
+++ b/09-estructuras-control.Rmd
@@ -1,25 +1,56 @@
 # Estructuras de control
-En esta ocasión revisaremos las estructuras de control de R. Estas estructuras nos permiten controlar la manera en que se ejecuta nuestro código, lo cual es de gran utilidad, en especial al definir funciones.
+Como su nombre lo indica, las estructuras de control nos permiten controlar la manera en que se ejecuta nuestro código. 
+
+Las estructuras de control establecen **condicionales** en nuestros código. Por ejemplo, qué condiciones deben cumplirse para realizar una operación o qué debe ocurrir para ejecutar una función.
+
+Esto es de gran utilidad para determinar la lógica y el orden en que ocurren las operaciones, en especial al definir funciones.
+
+Las estructuras de control más usadas en R son las siguientes.
+
+| Estructura de control | Descripción
+| ---                   |---
+| `if`, `else`          | Si, de otro modo
+| `for`                 | Para cada uno en
+| `while`               | Mientras
+| `break`               | Interrupción
+| `next`                | Siguiente
 
 ## if, else
-**if** (si) es usado cuando deseamos que una operación de ejecute únicamente cuando una condición se cumple. **else** (de otro modo) es usado para indicarle a R qué hacer en caso de la condición de un **if** no se cumpla. 
+`if` (si) es usado cuando deseamos que una operación de ejecute únicamente cuando una condición se cumple. 
 
-Un **if** es la manera de decirle a R: 
-**SI esta condición es cierta, ENTONCES haz estas operaciones**.
+`else` (de otro modo) es usado para indicarle a R qué hacer en caso de la condición de un `if` no se cumpla. 
 
-El modelo para un **if** es:
+Un `if` es la manera de decirle a R: 
+
+* **SI** esta condición es cierta, **ENTONCES** haz estas operaciones.
+
+El modelo para un `if` es:
 ```{r, eval=FALSE}
 if(Condición) {
   operaciones_si_la_condición_es_TRUE
 }
 ```
 
-Si la condición es **TRUE** se realizan las operaciones, en caso contrario, no ocurre nada y el código con las operaciones no es ejecutado.
+Si la condición se cumple, es decir, es verdadera (`TRUE`), entonces se realizan las operaciones. En caso contrario, no ocurre nada y el código con las operaciones no es ejecutado.
 
-**else** complementa un **if**, pues indica qué deseamos cuando la condición es **FALSE**, en lugar de hacer nada.
+Por ejemplo, le pedimos a R que nos muestre el texto "Verdadero" si la condición se cumple.
+```{r, echo=TRUE}
+# Se cumple la condición y se muestra "verdadero"
+if(4 > 3) {
+  "Verdadero"
+}
 
-Un **if** con **else** es la manera de decirle a R:
-**SI esta condición es es cierta, ENTONCES haz estas operaciónes, DE OTRO MODO, ENTONCES haz estas otras operaciones**.
+# No se cumple la condición y no pasa nada
+if(4 > 5) {
+  "Verdadero"
+}
+```
+
+`else` complementa un `if`, pues indica qué ocurrirá cuando la condición no se cumple, es falsa (`FALSE`), en lugar de no hacer nada.
+
+Un `if` con `else` es la manera de decirle a R:
+
+* **SI** esta condición es es cierta, **ENTONCES** haz estas operaciónes, **DE OTRO MODO** haz estas otras operaciones.
 
 El modelo para un **if** con un **else** es:
 ```{r, eval=FALSE}
@@ -30,11 +61,29 @@ if(condición) {
 }
 ```
 
-**if** y **else** nos dan las herramientas para ejecutar código de R de manera condicional.
+Usando los ejemplos anteriores, podemos mostrar "Falso" si no se cumple la condición, en lugar de que no ocurra nada.
+
+```{r, echo=TRUE}
+# Se cumple la condición y se muestra "Verdadero"
+if(4 > 3) {
+  "Verdadero"
+} else {
+  "Falso"
+}
+
+# No se cumple la condición y se muestra "Falso"
+if(4 > 5) {
+  "Verdadero"
+} else {
+  "Falso"
+}
+```
 
 ### Usando if y else
-Empezamos definiendo una función que calcula el promedio de calificaciones de un estudiante.
-```{r}
+Para ilustrar el uso de `if` `else` definiremos una función que calcule el promedio de calificaciones de un estudiante y, dependiendo de la calificación calculada, nos devuelva un mensaje específico.
+
+Empezamos definiendo una función para calcular promedio. En realidad, sólo es la aplicación de la función `mean()` ya existente en R *base*, pero la ampliaremos después.
+```{r, echo=TRUE}
 promedio <- function(calificaciones) {
   mean(calificaciones)
 }
@@ -43,12 +92,14 @@ promedio(c(6, 7, 8, 9, 8))
 promedio(c(5, 8, 5, 6, 5))
 ```
 
-Saber el promedio es útil, pero nos gustaría que esta función nos dijera si el estudiante ha aprobado o no.
+Ahora deseamos que esta función nos muestre si un estudiante ha aprobado o no.
 
-Sabemos que un estudiante necesita obtener 6 o más de promedio para aprobar, en otras palabras, si es cierto que su calificación es igual o mayor a 6, de otro modo, está reprobado.
+Si asumimos que un estudiante necesita obtener 6 o más de promedio para aprobar, podemos decir que:
 
-Aplicamos un **if** con **else** a la función **promedio( )**, usando esta condición.
-```{r}
+* **SI** el promedio de un estudiante es igual o mayor a 6, **ENTONCES** mostrar "Aprobado", **DE OTRO MODO**, mostrar "Reprobado".
+
+Aplicamso esta lógica con un `if`,  `else` en la función `promedio()`.
+```{r, echo=TRUE}
 promedio <- function(calificaciones) {
   media <- mean(calificaciones)
   
@@ -58,17 +109,20 @@ promedio <- function(calificaciones) {
     print("Reprobado")
   }
 }
+```
 
-
+Probemos nuestra función
+```{r, echo=TRUE}
 promedio(c(6, 7, 8, 9, 8))
 promedio(c(5, 8, 5, 6, 5))
 ```
 
-Justo lo que necesitamos. Aunque los resultados no tienen la mejor presentación.
+Está funcionando, aunque los resultados podrían tener una mejor presentación.
 
-Usaremos la función **paste0( )** para pegar el promedio de calificaciones, como texto, con el resultado de "Aprobado" o "Reprobado".
+Usaremos la función `paste0()` para pegar el promedio de calificaciones, como texto, con el resultado de "Aprobado" o "Reprobado". Esta función acepta como argumentos cadenas de texto y las pega (concatena) entre sí, devolviendo como resulta una nueva cadena.
 
-```{r}
+Primero concatenaremos la palabra "Calificación: " a la media obtenida con la función `promedio()` y después el resultado de esta operación con la palabra "aprobado" o "reprobado", según corresponda.
+```{r, echo=TRUE}
 promedio <- function(calificaciones) {
   media <- mean(calificaciones)
   texto <- paste0("Calificación: ", media, ", ")
@@ -79,108 +133,182 @@ promedio <- function(calificaciones) {
     print(paste0(texto, "reprobado"))
   }
 }
+```
 
+Pongamos a prueba nuestra función.
+```{r}
 promedio(c(6, 7, 8, 9, 8))
 promedio(c(5, 8, 5, 6, 5))
 ```
 
+Por supuesto, como lo vimos en el capítulo sobre [funciones](#funciones), podemos hacer aún más compleja a `promedio()`, pero esto es suficiente para conocer mejor las aplicaciones de `if` `else`.
+
 ### ifelse
-La función **ifelse( )** nos permite vectorizar **if, else**. En lugar de escribir una línea de código para cada comparación, podemos usar una sola llamada a esta función, que se aplicará a todos los elementos de un vector.
+La función `ifelse( )` nos permite vectorizar `if, else`. En lugar de escribir una línea de código para cada comparación, podemos usar una sola llamada a esta función, que se aplicará a todos los elementos de un vector.
 
-Para cada comparación, **ifelse** nos devolverá un valor si la condición es **TRUE** y otro diferente si es **FALSE**. Esta función tiene el siguiente modelo:
+Si intentamos usar `if` `else` con un vector, se nos mostrará una advertencia.
+```{r}
+if(1:10 < 3) {
+  "Verdadero"
+}
+```
+Este mensaje nos dice que sólo se usará el primer elemento del vector para evaluar su la condición es verdadera y lo demás será ignorado.
 
-```{r, eval=FALSE}
+En cambio, con `ifelse` se nos devolverá un valor para cada elemento de un vector en el que la condición sea `TRUE`, además nos devolvera otro valor para los elementos en que la condición sea `FALSE`. 
+
+Esta función tiene la siguiente forma.
+```{r, echo=TRUE, eval=FALSE}
 ifelse(vector, valor_si_TRUE, valor_si_FALSE)
 ```
 
-Por ejemplo, podemos usar **if_else** para saber si los números en un vector son pares o nones.
-
-```{r}
+Si intentamos el ejemplo anterior con `ifelse()`, se nos devolverá un resultado para cada elemento del vector, no sólo del primero de ellos.
+```{r, echo=FALSE}
+ifelse(1:10 < 3, "Verdadero", "Falso")
+```
+De este modo podemos usar `ifelse()` para saber si los números en un vector son pares o nones.
+```{r, echo=TRUE}
 num <- 1:8
 
 ifelse(num %% 2 == 0, "Par", "Non")
 ```
 
-Podemos crear condiciones más complejas usando operadores Booleanos.
+También tenemos la opción de crear condiciones más complejas usando operadores Booleanos.
 
-En este caso, pedimos sólo los números que son exactamente divisibles entre 2 y 3.
-
-```{r}
+Por ejemplo, pedimos sólo los números que son exactamente divisibles entre 2 y 3.
+```{r, echo=TRUE}
 num <- 1:20
 
 ifelse(num %% 2 == 0 & num %% 3, "Divisible", "No divisible")
 ```
 
+Desde luego, esto es paricularmente útil para recodificar datos.
+```{r, echo = TRUE}
+num <- c(0, 1, 0, 0, 0, 1, 1)
+
+num <- ifelse(num == 0, "Hombre", "Mujer")
+
+num
+```
+
+
 ## for 
-Esta estructura nos permite hacer un bucle (loop), realizando una operación para cada elemento de un conjunto de datos.
+La estructura `for` nos permite ejecutar un bucle (*loop*), realizando una operación para cada elemento de un conjunto de datos.
 
 Su estructura es la siguiente:
-  ```{r, eval=FALSE}
-for(elemento in conjunto) {
+```{r, echo=TRUE, eval=FALSE}
+for(elemento in objeto) {
   operacion_con_elemento
 }
 ```
 
-Podemos, por ejemplo, obtener el cuadrado de cada uno de los elementos en un vector numérico.
+Con lo anterior le decimos a R:
 
-```{r} 
-dado <- 1:4
+* **PARA** cada elemento **EN** un objeto, haz la siguiente operación.
 
-for(cara in dado) {
-  cara ^ 2 
+Al escribir un bucle `for` la parte que corresponde al **elemento** la podemos llamar como nosotros deseemos, pero la parte que corresponde al **objeto** debe ser el nombre de un objeto existente.
+
+Los dos bucles siguientes son equivalentes, sólo cambia el nombre que le hemos puesto al **elemento**.
+```{r, eval = FALSE}
+objeto <- 1:10
+
+for(elemento in objeto) {
+  operacion_con_elemento
 }
 
+for(i in objeto) {
+  operacion_con_elemento
+}
 ```
 
-Si ejectutaste el código anterior notarás que no ha ocurrido nada, o al menos R no nos ha devuelto un resultado.
+Tradicionalmente se usa la letra **i** para denotar al elemento, pero nosotros usaremos nombres más descriptivos en este capítulo.
 
-Las operaciones en un **for** se realizan pero sus resultados no son devueltos automáticamente, es necesario pedirlos de manera explícita.
 
-Podemos usar una solución provisional para mostrar los resultados de un bucle con la función **print**, si lo único que nos interesa conocer el resultado de un **for** pero no asignarlo a un objeto.
+### Usando for
+Vamos a obtener el cuadrado de cada uno de los elementos en un vector numérico del 1 al 6, que representa las caras de un dado.
+```{r, echo=TRUE} 
+dado <- 1:6
 
-```{r}
+for(cara in dado) {
+  dado ^ 2 
+}
+```
+
+Notarás que al ejecutar el código anterior parece que no ha ocurrido nada. En realidad, sí se han realizado las operaciones, pero R no ha devuelto sus resultados.
+
+Las operaciones en un `for` se realizan pero sus resultados nunca son devueltos automáticamente, es necesario pedirlos de manera explícita.
+
+A diferencia de otros lenguajes de programación en los que pedimos los resultados de un bucle con `return()`, en R este procedimiento sólo funciona con funciones.
+
+Una solución para mostrar los resultados de un bucle `for` es usar la función `print()`.
+```{r, echo=TRUE}
 for(cara in dado) {
   print(cara ^ 2)
 }
 ```
 
-Si deseamos asignar los resultados de un bucle **for** a un objeto, usamos índices. 
+Comprobamos que la operación ha sido realizada a cada elemento de nuestro objeto. Sin embargo, usar `print()` sólo mostrará los resultados de las operaciones en la consola, no los asignará a un objeto.
+
+Si deseamos asignar los resultados de un bucle `for` a un objeto, usamos [índices](##indices). 
 
 Aprovechamos que el primer elemento en un bucle siempre es identificado con el número **1** y que continuará realizando operaciones hasta llegar al total de elementos que hemos especificado.
+```{r, echo=TRUE}
+for(numero in 1:10) {
+  print(numero)
+}
+```
 
-En nuestro caso, pasamos por los valores de dado, cara por cara. La primera cara será igual a 1, la segunda a 2, la tercera a 3 y la cuarta a 4. Así, podemos usar estos valores para asignar un valor a una posición específica en un vector, incluso si este está vacio.
+En nuestro ejemplo, pasamos por los valores de dado, cara por cara. La primera cara será igual a **1**, la segunda a **2**, y así sucesivamente hasta el **6**. 
 
-```{r}
+Podemos usar estos valores para asignar cada valor resultante de nuestras operaciones a una posición específica en un vector, incluso si este está vacio.
+
+Creamos un vector vacio, asignándole como `NULL` como valor.
+```{r, echo=TRUE}
 mi_vector <- NULL
+```
 
+Ejecutamos nuestro bucle.
+```{r, echo=TRUE}
 for(cara in dado) {
   mi_vector[cara] <- cara ^ 2
 }
+```
 
+Aunque no fueron mostrados en la consola, los resultados han sido asignados al objeto `mi_vector`.
+```{r, echo=TRUE}
 mi_vector
 ```
 
-Notarás que el resultado que obtenemos usando **for** es el mismo que si vectorizamos la operación.
-
-```{r}
+### for y vectorización
+Notarás que el resultado que obtuvimos usando **for** es el mismo que si vectorizamos la operación.
+```{r, echo=TRUE}
 dado ^ 2
 ```
 
-Dado que contamos con vectorización de operaciones y podemos usar las funciones de la familia **apply**, los bucles **for** no son particularmente populares en R. sin embargo, es conveniente que los conozcas, pues hay ocasiones en que son la mejor herramienta para resolver ciertos problemas.
+Dado que en R contamos con vectorización de operaciones, que podemos usar las funciones de [la familia apply](#la-familia-apply) (discutido en siguiente capítulo) en objetos diferentes a vectores y que la manera de recuperar los resultados de un `for` es un tanto laboriosa, este tipo de bucle no es muy popular en R. 
+
+En R generalmente hay opciones mejores, en cuanto a simplicidad y velocidad de cómputo, que un bucle `for`.
+
+Sin embargo, es conveniente que conozcas esta estructura de control, pues hay ocasiones en la que es la mejor herramienta para algunos problemas específicos.
 
 ## while
-
-Este es otro tipo de bucle, que ocurre **mientras** una condición es verdadera. En otras palabras, se realiza una operación hasta llegar a un umbral.
+Este es un tipo de bucle que ocurre **mientras** una condición es verdadera (`TRUE`). La operación se realiza hasta que se se llega a cumplir un criterio previamente establecido.
 
 El modelo de **while** es:
-```{r, eval =FALSE}
+```{r, echo=TRUE, eval=FALSE}
 while(condicion) {
   operaciones
 }
 ```
 
-Probemos sumar **+1** a un valor, mientras que ese valor sea menor que 5.
-```{r}
+Con esto le decimos a R:
+
+* **MIENTRAS** esta condición sea **VERDADERA**, haz estas operaciones.
+
+La condición generalmente es expresada como el resultado de una o varias operaciones de comparación, pero también puede ser el resultado de una función.
+
+### Usando while
+Probemos sumar `+1` a un valor, mientras que este sea menor que 5. Al igual que con `for`, necesitamos la función `print()` para mostrar los resultados en la consola.
+```{r, echo=TRUE}
 umbral <- 5
 valor <- 0
 
@@ -188,55 +316,79 @@ while(valor < umbral) {
   print("Todavía no.")
   valor <- valor + 1
 }
-
 ```
 
-¡Ten cuidado con crear bucles infinitos! Si corres un bucle while con una condición que nunca será FALSE, entonces el bucle nunca se detendrá.
+¡Ten cuidado con crear bucles infinitos! Si ejecutas un `while` con una condición que nunca será `FALSE`, este nunca se detendrá.
 
-```{r, eval=FALSE}
-# Si corres lo siguiente, presiona ESC para detener la ejecución, de otro modo, 
-# correra por siempre.
+Si corres lo siguiente, presiona la tecla **ESC** para detener la ejecución, de otro modo, correra por siempre y puede llegar a congelar tu equipo.
+```{r, echo=TRUE, eval=FALSE}
 while(1 < 2) {
   print("Presiona ESC para detener")
 }
 ```
 
-El anterior es un error común. Estamos sumando 1 a i con cada pase del bucle, pero como no estamos asignando este nuevo valor a i,esta se mantiene igual, la condición nunca se cumplirá y el bucle será infinito.
-```{r, eval=FALSE}
-# Si corres lo siguiente, presiona ESC para detener la ejecución.
+El siguiente es un error común. Estamos sumando 1 a `i` con cada iteración del bucle, pero como no estamos asignando este nuevo valor a `i`, su valor se  mantiene igual, entonces la condición nunca se cumplirá y el bucle será infinito.
+
+De nuevo, si corres lo siguiente, presiona la tecla **ESC** para detener la ejecución.
+```{r, echo=TRUE, eval=FALSE}
 i <- 0
 while(i < 10) {
   i + 1
 }
 ```
 
-Un uso común de **while** es la realización de operación que queremos detener cuando se cumple una condición, pero desconocemos cuándo se cumplirá esa condición.
+Un uso común de **while** realizae operaciones que queremos detener cuando se cumple una condición, pero desconocemos cuándo ocurrirá eso.
 
-Supongamos que, por alguna razón, queremos sumar calificaciones, del 1 al 10 al azar, hasta llegar a un número que no sea menor a 50. Nos interesa saber cuántas calificaciones se tuvieron que sumar y cuál fue el resultado final.
+Supongamos que, por alguna razón queremos sumar calificaciones, del 1 al 10 al azar, hasta llegar a un número que mayor o igual a 50. Además nos interesa saber cuántas calificaciones sumaron y cuál fue el resultado al momento de cumplir la condición.
 
-Cada vez que corras el código siguiente obtendrás un resultado distinto, pero siempre obtendrás un **valor** mayor a 50.
-```{r}
+Para obtener números al azar del 1 al 10, usamos la función `sample()`. Esta función va a tomar una muestra al azar de tamaño igual a 1 (argumento `size`) de un vector del 1 al 10 (argumento `x`) cada vez que se ejecute.
+
+Por lo tanto, cada vez que corras el ejemplo siguiente obtendrás un resultado distinto, pero siempre llegarás a un valor mayor a 50.
+
+Creamos dos objetos, `conteo` y `valor`. Les asignamos el valor 0.
+```{r, echo=TRUE}
 conteo <-  0
 valor <- 0
+```
 
+Nuestro `while` hará dos cosas. 
+
+Primero, tomará un numero al azar del 1 al 10, y lo sumará a `valor`. Segundo, le sumará 1 a `conteo` cada que esto ocurra, de esta manera sabremos cuantas iteraciones ocurrieron para llegar a un valor que no sea menor a 50.
+```{r,echo=TRUE}
 while(valor < 50) {
-  valor <- valor + sample(1:10, 1)
+  valor <- valor + sample(x = 1:10, size = 1)
+  conteo <- conteo + 1
+}
+```
+
+Aunque no son mostrados en la consola los resultados son asignados a los objetos `valor`y `conteo`
+```{r, echo=TRUE}
+valor
+conteo
+```
+
+Por último, si intentamos ejecutar un `while` para el que la condición nunca es igual a `TRUE`, este no realizará ninguna operación.
+```{r, echo=TRUE}
+conteo <- 0
+
+while("dado" == "ficha") {
   conteo <- conteo + 1
 }
 
-valor
 conteo
-
 ```
 
 ## break y next
-Estas son dos son palabras reservadas en R, no podemos asignarles nuevos valores y realizan una operación específica cuando aparecen en nuestro código.
+`break` y `next`  son  **palabras reservadas** en R, no podemos asignarles nuevos valores y realizan una operación específica cuando aparecen en nuestro código.
 
-Break nos permite a interrumpir un bucle, mientras que next nos deja avanzar a la siguiente iteración del bucle, "saltandose" la actual.
+`break` nos permite **interrumpir** un bucle, mientras que `next` nos deja avanzar a la **siguiente** iteración del bucle, "saltandose" la actual. Ambas funcionan para `for` y `while`.
 
-Usamosbvreak para interrumpir un bucle. En el momento que la condición se cumple, el bucle se detiene, aunque existan elementos a los cuales aún podría aplicarse.
-```{r}
-for(i in 1:4) {
+### Usando break
+Para interrumpir un bucle con `break`, necesitamos que se cumpla una condición. Cuando esto ocurre, el bucle se detiene, aunque existan elementos a los cuales aún podría aplicarse.
+
+Interrumpimos un `for` cuando `i` es igual a 3, aunque aún queden 7 elementos en el objeto.
+```{r, echo=TRUE}
+for(i in 1:10) {
   if(i == 3) {
     break
   }
@@ -244,10 +396,25 @@ for(i in 1:4) {
 }
 ```
 
-Como podrás notar, una aplicación de break es similar a while: realizar una operación hasta que se cumple con una condición específica.
+Interrumpimos un `while` antes de se cumpla la condición de que `numero` sea mayor a 5, en cuanto este tiene el valor de 15.
+```{r, echo=TRUE}
+numero <- 20
 
+while(numero > 5) {
+  if(numero == 15) {
+    break
+  }
+  numero <- numero - 1
+}
+
+numero
+```
+
+Como habrás notado, la  aplicación de `break` es muy similar a `while`, realizar una operación hasta que se cumple una condición, y ambos pueden usarse en conjunto.
+
+### Usando next
 Por su parte, usamos next para "saltarnos" una iteración en un bucle. Cuando la condición se cumple, esa iteración es omitida. 
-```{r}
+```{r, echo=TRUE}
 for(i in 1:4) {
   if(i == 3) {
     next
@@ -264,7 +431,7 @@ En realidad, **break** es indispensable en **repeat**.
 Este es un bucle que se llevará a cabo el número de veces que especifiquemos, sin que esto dependa de una condición. Es decir, se asegura que ocurriran las operaciones que contenga al menos en una ocasión.
 
 El modelo de **repeat** es el siguiente:
-```{r, eval=FALSE}
+```{r, echo=TRUE, eval=FALSE}
 repeat {
   operaciones
   
@@ -272,10 +439,10 @@ repeat {
 }
 ```
 
-Si no incluimos un **break**, el bucle se repetirá indefinidamente.
+Si no incluimos un `break`, el bucle se repetirá indefinidamente.
 
-El siguiente repeat sumará **+1** a valor hasta que sea igual a 5.
-```{r}
+El siguiente repeat sumará `+1` a valor hasta que sea igual a 5.
+```{r, echo=TRUE}
 valor = 0
 mi_vector <- NULL
 repeat{
