--- a/index.Rmd
+++ b/index.Rmd
@@ -11,19 +11,18 @@ output:
   # bookdown::pdf_book:
   #   keep_tex: yes
   #   #highlight: espresso
-  # bookdown::html_book:
-  #   css: toc.css
-  #   highlight: espresso
-  #   documentclass: book
-  #   theme: journal
+  bookdown::html_book:
+    css: toc.css
+    highlight: espresso
+    documentclass: book
+    theme: journal
 ---
 
-# Prefacio
-Juan Bosco Mendoza Vega 
-
+# Prefacio {-}
 Este libro esta dirigído a personas que nunca han usado R.
 
 El propósito es que lector:
+
 *	conozca las características principales de R
 *	se familiarice con los tipos y estructuras de datos usados en R
 *	conozca el flujo de trabajo para el análisis de datos con R
